Criando página de itens, e ajustes finais nas outras páginas

--- a/frontend/toDo/package.json
+++ b/frontend/toDo/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
+    "@swimlane/dragula": "^3.8.0",
+    "@swimlane/ngx-dnd": "^9.0.0",
+    "@types/dragula": "^3.7.1",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
